--- a/public/html/01.deepcopy.html
+++ b/public/html/01.deepcopy.html
@@ -17,4 +17,5 @@
     console.log('arr4', arr4)
     console.log('arr5', arr5)
     console.log('arr6', arr6)
+    // _.cloneDeep(~~) 딥카피
 </script>
